--- a/.classpath
+++ b/.classpath
@@ -2,10 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/Volumes/Einstein/balajiciyer/git/JMeter-Error-Listener/lib/ApacheJMeter_core.jar"/>
-	<classpathentry kind="lib" path="/Volumes/Einstein/balajiciyer/git/JMeter-Error-Listener/lib/avalon-framework-4.1.4.jar"/>
-	<classpathentry kind="lib" path="/Volumes/Einstein/balajiciyer/git/JMeter-Error-Listener/lib/jorphan.jar"/>
-	<classpathentry kind="lib" path="/Volumes/Einstein/balajiciyer/git/JMeter-Error-Listener/lib/logkit-2.0.jar"/>
-	<classpathentry kind="lib" path="/Volumes/Einstein/balajiciyer/git/JMeter-Error-Listener/lib/oro-2.0.8.jar"/>
+	<classpathentry kind="lib" path="lib/ApacheJMeter_core.jar"/>
+	<classpathentry kind="lib" path="lib/avalon-framework-4.1.4.jar"/>
+	<classpathentry kind="lib" path="lib/jorphan.jar"/>
+	<classpathentry kind="lib" path="lib/logkit-2.0.jar"/>
+	<classpathentry kind="lib" path="lib/oro-2.0.8.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
